# sphinx-typesense

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  SPECIFICATION.md  docker-compose.yml  plan.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: BUG.yml  DOCS.yml  FEATURE.yml  config.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Makefile  backends.rst  changelog.rst  conf.py  configuration.rst  index.rst  security.rst  themes.rst
docs/_static/: custom.css
docs/api/: config.rst  index.rst  indexer.rst  templates.rst  themes.rst
docs/getting-started/: index.rst  installation.rst  quickstart.rst
examples/: Makefile
examples/docs/: showcase.html
examples/docs/docs-alabaster/: conf.py
examples/docs/docs-furo/: conf.py
examples/docs/docs-pydata/: conf.py
examples/docs/docs-rtd/: conf.py
examples/docs/docs-shibuya/: conf.py
examples/docs/source/: api.rst  conf.py.tmpl  index.rst
examples/litestar_app/: __init__.py  app.py  models.py
examples/litestar_app/controllers/: __init__.py  health.py  items.py  users.py
src/sphinx_typesense/: __init__.py  config.py  indexer.py  templates.py  themes.py
src/sphinx_typesense/backends/: __init__.py  base.py  pagefind.py  typesense.py
src/sphinx_typesense/static/: pagefind-init.js  pagefind-ui.css  typesense-docsearch.css  typesense-init.js
tests/: __init__.py  conftest.py  test_config.py  test_indexer.py  test_init.py  test_integration.py  test_templates.py  test_themes.py
tests/fixtures/: __init__.py
tests/fixtures/sample_html/: basic.html
tests/test_backends/: __init__.py  test_base.py  test_pagefind.py  test_typesense.py
